# cime

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestScript.cmake  ChangeLog  ChangeLog_template  Externals.cfg  Externals_cime.cfg  LICENSE.TXT  MANIFEST.in  Makefile.am  README.html  README.md  README.rst  README_pyCECT.rst  README_pyEnsSum.rst  README_pyEnsSumPop.rst  TO_DELETE  __init__.py  cmake_config.h.in  config  configure.ac  conftest.py  genindex.html  glossary.html  gm_cumul.sh  index.html  libpio.settings.in  objects.inv  pio_config.cmake.in  pop_ensemble.json  py-modindex.html  pyCECT.py  (+15 more)
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  Makefile.am  README  generate_xmlschema.py  requirements.txt  tools_autodoc.cfg  tools_autodoc.py
doc/dev/refactor/: README.md  feature_single_entrypoint.md  feature_srcroot.md  implementation.md  plan.md
doc/images/: Makefile.am
doc/modelnl/: env_case.html  env_mach_pes.html  env_run.html  nl_drv.html
doc/source/: Decomp.txt  Error.txt  Examples.txt  GettingStarted.txt  Installing.txt  Introduction.txt  Makefile.am  Testing.txt  api.rst  api.txt  base.txt  c_api.txt  code_style.txt  conf.py  contributing-guide.rst  contributing_code.txt  faq.txt  index.rst  iosystem.txt  mach_walkthrough.txt  running-a-case.rst  supported-machines.rst  system_testing.rst  users_guide.txt
doc/source/Tools_user/: index.rst.template
doc/source/_static/: custom.css  pop_ver.js
doc/source/_templates/: versions.html
doc/source/build_cpl/: adding-components.rst  introduction.rst
doc/source/ccs/: building-a-case.rst  cime-config.rst  create-a-case.rst  creating-a-case.rst  customizing-inputs.rst  index.rst  (+7 more)
doc/usersguide/: introduction.xml
src/: CMakeLists.txt  Makefile.am
src/CMake/: CIME_initial_setup.cmake  CIME_utils.cmake  genf90_utils.cmake
src/build_scripts/: buildlib.cprnc  buildlib.csm_share  buildlib.gptl  buildlib.internal_components  buildlib.kokkos  buildlib.mct  buildlib.mpi-serial  buildlib.pio  buildlib_cmake.internal_components
src/clib/: CMakeLists.txt  Makefile.am  bget.c  bget.h  parallel_sort.c  pio.h  pio_darray.c  pio_darray_int.c  pio_error.c  pio_error.h  pio_file.c  pio_get_nc.c  pio_get_vard.c  pio_getput_int.c  pio_internal.h  pio_lists.c  pio_meta.h.in  pio_msg.c  pio_nc.c  pio_nc4.c  pio_nc_async.c  pio_put_nc.c  pio_put_nc_async.c  pio_put_vard.c  pio_rearrange.c  pio_spmd.c  pio_varm.c  pioc.c  pioc_sc.c  pioc_support.c  topology.c
src/flib/: CMakeLists.txt  Makefile.am  ncint_mod.F90  pio.F90  pio_kinds.F90  pio_nf.F90  pio_support.F90  pio_types.F90  piodarray.F90.in  piodarray.F90.in2  piolib_mod.F90  pionfatt_mod.F90.in  pionfatt_mod.F90.in2  pionfget_mod.F90.in  pionfget_mod.F90.in2  pionfput_mod.F90.in  pionfput_mod.F90.in2
src/fncint/: Makefile.am
src/gptl/: Makefile.am  f_wrappers_2.c
src/ncint/: CMakeLists.txt  Makefile.am  nc_put_vard.c  ncint_pio.c  ncint_vard.c  ncintdispatch.c  ncintdispatch.h
src/share/: #CMakeLists.txt#  CMakeLists.txt
tests/: CMakeLists.txt  Makefile.am  derecho_testsuite.py
tests/cperf/: CMakeLists.txt  piodecomptest.c
tests/cunit/: CMakeLists.txt  Makefile.am  pio_tests.h  run_tests.sh  run_tests.sh.in  test_async_1d.c  test_async_3proc.c  test_async_4proc.c  test_async_manyproc.c  test_async_mpi.c  test_async_multi2.c  test_async_multicomp.c  test_async_perf.c  test_async_simple.c  test_common.c  test_darray.c  test_darray_1d.c  test_darray_2sync.c  test_darray_3d.c  test_darray_append.c  test_darray_async.c  test_darray_async_from_comm.c  test_darray_async_many.c  test_darray_async_simple.c  test_darray_fill.c  test_darray_frame.c  test_darray_lossycompress.c  test_darray_multi.c  test_darray_multivar.c  test_darray_multivar2.c  test_darray_multivar3.c  test_darray_uneven.c  test_darray_vard.c  test_decomp_frame.c  test_decomp_uneven.c  test_decomps.c  test_file.c  test_intercomm2.c  test_iosystem2.c  test_iosystem2_simple.c  (+18 more)
tests/doftests/: dofcopy.F90
tests/fncint/: Makefile.am  ftst_pio.f90  ftst_pio_orig.f90  run_tests.sh  tst_c_pio.c
tests/general/: CMakeLists.txt  Makefile.am  README.md  ncdf_fail.F90.in2  ncdf_get_put.F90.in  ncdf_get_put.F90.in2  ncdf_inq.F90.in  ncdf_inq.F90.in2  ncdf_simple_tests.F90.in  ncdf_simple_tests.F90.in2  pio_decomp_fillval.F90.in  pio_decomp_fillval.F90.in2  pio_decomp_fillval2.F90  pio_decomp_frame_tests.F90.in  pio_decomp_frame_tests.F90.in2  pio_decomp_tests.F90.in  pio_decomp_tests.F90.in2  pio_decomp_tests_1d.F90.in  pio_decomp_tests_1d.F90.in2  pio_decomp_tests_2d.F90.in  pio_decomp_tests_2d.F90.in2  pio_decomp_tests_3d.F90.in2  pio_decomphalo_tests_2d.F90.in  pio_file_fail.F90.in  pio_file_fail.F90.in2  pio_file_simple_tests.F90.in  pio_file_simple_tests.F90.in2  pio_filter_tests.F90.in  pio_init_finalize.F90.in  pio_init_finalize.F90.in2  pio_iosystem_tests.F90.in  pio_iosystem_tests.F90.in2  pio_iosystem_tests2.F90.in  pio_iosystem_tests2.F90.in2  pio_iosystem_tests3.F90.in  pio_iosystem_tests3.F90.in2  pio_rearr.F90.in  pio_rearr.F90.in2  pio_rearr_opts.F90.in  pio_rearr_opts.F90.in2  (+5 more)
tests/ncint/: CMakeLists.txt  Makefile.am  pio_err_macros.h  run_perf.sh  run_tests.sh  run_tests.sh.in  tst_async_multi.c  tst_ncint_open.c  tst_ncint_perf.c  tst_pio_async.c  tst_pio_udf.c  tst_var_compress.c
tests/performance/: Makefile.am  Pioperformance.md  pioperf.nl  pioperformance.F90
tests/unit/: CMakeLists.txt  Makefile.am  basic_tests.F90  driver.F90  ftst_vars.F90  ftst_vars_chunking.F90  global_vars.F90  ncdf_tests.F90  pio_tests.h  run_tests.sh  run_tests.sh.in  test_async_2comp.c  test_async_3proc.c  test_async_4proc.c  test_async_8io_24comp.c  test_async_simple.c  test_common.c  test_darray.c  test_darray_async.c  test_file.c  test_intercomm.c  test_intercomm2.c  test_intercomm3.c  test_intercomm4.c  test_iosystem2.c  test_iosystem2_simple.c  test_iosystem2_simple2.c  test_iosystem3.c  test_iosystem3_simple.c  test_iosystem3_simple2.c  test_names.c  test_nc4.c  test_spmd.c
(+7859 files in other folders)
