[metadata]
name = CIME
version = 0.0.1

[options]
packages = find:

[options.packages.find]
exclude = CIME.tests*

[options.package_data]
CIME.build_scripts = *
CIME.config = *,**/*,**/**/*,**/**/**/*,**/**/**/**/*
CIME.Tools = *,**/*,**/**/*.**/**/*,**/**/**/**/*
CIME.templates = *,**/*,**/**/*.**/**/*,**/**/**/**/*
CIME.data = *,**/*,**/**/*.**/**/*,**/**/**/**/*

[options.entry_points]
console_scripts =
  create_clone = CIME.scripts.create_clone:_main_func
  create_newcase = CIME.scripts.create_newcase:_main_func
  create_test = CIME.scripts.create_test:_main_func
  query_config = CIME.scripts.query_config:_main_func
  query_testlists = CIME.scripts.query_testlists:_main_func
