[metadata]
name = CIME
version = 0.0.1

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
  create_clone = CIME.scripts.create_clone:_main_func
  create_newcase = CIME.scripts.create_newcase:_main_func
  create_test = CIME.scripts.create_test:_main_func
  query_config = CIME.scripts.query_config:_main_func
  query_testlists = CIME.scripts.query_testlists:_main_func

[tool:pytest]
junit_family=xunit2
python_files = test_*.py
testpaths =
    CIME/tests

[coverage:report]
omit =
    CIME/tests/*
