# This is part of PIO. It creates the doc Makefile.

# Ed Hartnett 4/1/19

EXTRA_DIST = CMakeLists.txt customdoxygen.css Doxyfile.in	\
DoxygenLayout.xml doxygen.sty

# simple doxygen target
all:
	doxygen Doxyfile

# clean up the extras including doxygen
#clean-local:
#	cd ${top_srcdir}
#	rm -rf doxygen
