## This is the automake file to build the PIO netCDF integration
## layer for the PIO fortran library.
# Ed Hartnett 7/7/19

# Find pio.h.
AM_CPPFLAGS = -I$(top_srcdir)/src/clib

# This is our output. The ncint convenience library.
#noinst_LTLIBRARIES = libfncint.la

# The source files.
#libfncint_la_SOURCES = ncintdispatch.c ncintdispatch.h ncint_pio.c
